<?xml version='1.0' encoding='UTF-8'?>
<resources>
    <string name="app_name">Widgets</string>
    <string name="camerax">camerax</string>
    <string name="widgets">widgets</string>
    <string name="jni">jni</string>
    <string name="opengl">opengl</string>
    <string name="particles">particles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
