<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragment.MainFragment">

    <Button
        android:id="@+id/fragmentBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camerax"/>

    <Button
        android:id="@+id/camerax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camerax"/>

    <Button
        android:id="@+id/widgets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widgets"/>

    <Button
        android:id="@+id/jni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jni" />

    <Button
        android:id="@+id/opengl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opengl" />

    <Button
        android:id="@+id/particles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/particles" />

    <Button
        android:id="@+id/surfaceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="surfaceView" />

    <Button
        android:id="@+id/textureView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="textureView" />
    <Button
        android:id="@+id/mediaPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="mediaPlayer" />

</LinearLayout>